--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<start-class>cl.procyon.proyecto.ProyectoApplication</start-class>
 	</properties>
 
 	<dependencies>
